programs/tests/invalid_Programs/bad_else.kln
(*not an actual factor, missing required else*)

function bad_else (a:boolean,b:boolean): boolean
    if a then b